Update IvyResolver.java